# patrocars

./: .gitignore  Cargo.toml  database.sql  patrocars.example.toml
assets/: style.css
html-temple/lib/: Cargo.toml
html-temple/lib/src/: lib.rs
html-temple/macros/: Cargo.toml
html-temple/macros/src/: compiler.rs  input.rs  lib.rs
html-temple/parser/: Cargo.toml  lang.md
html-temple/parser/src/: arena.rs  error.rs  lib.rs
html-temple/parser/src/runtime/: error.rs  eval.rs  run.rs  value.rs
html-temple/parser/src/syntax/: error.rs  lexer.rs  parser.rs  source.rs
server-utils/lib/: Cargo.toml
server-utils/lib/src/: asset.rs  body.rs  convert.rs  cookie.rs  from.rs  fs.rs  impls.rs  lib.rs  log.rs  path.rs  server.rs  with.rs  ws.rs
server-utils/macros/: Cargo.toml
server-utils/macros/src/: lib.rs
server-utils/x-log-extension/: background.js  manifest.json  server-logs.js
src/: config.rs  db.rs  main.rs  utils.rs
src/app/: mod.rs
templates/: index.html  modelo-new.html  modelo.html  montadora-new.html  montadora.html  page.html  veiculo-new.html  veiculo.html
