[package]
name = "patrocars"
version = "0.0.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_qs = "0"
serde_json = { version = "1" }
chrono = { version = "0", features = ["serde"] }

tokio = { version = "1", features = ["process"]}
futures-util = { version = "0.3" }

either = { version = "1" }

server-utils = { path = "server-utils/lib" }
html-temple = { path = "html-temple/lib" }

log = { version = "0.4" }
simple_logger = { version = "5" }
rsfbclient = { version = "0.24.0", features = ["pure_rust"] }
toml = "0.8.19"
md5 = "0.7.0"
rand = "0.8.5"
ulid = "1.1.3"
intuple = "0.2.0"
