[package]
name = "server-utils"
version = "0.0.0"
edition = "2021"

[dependencies]
serde = { version = "1" }
serde_qs = { version = "0" }
serde_json = { version = "1" }
#chrono = { version = "0", features = ["serde"] }
futures = { version = "0" }
log = { version = "0.4" }
#recap-types = { path = "../recap-types" }

bytes = "1.2"
either = "1"
http-body = "1"
#http-body-util = "0.1"
#pin-project-lite = "0.2"
hyper = { version = "1.3.1", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1.3", features = ["server-auto", "tokio"] }
hyper-tungstenite = { version = ">=0.14.0" }
tokio = { version = "1", features = ["signal", "macros", "fs"] }
tokio-util = { version = "0.7", features = ["io"] }
mime_guess = { version = "2" }

#[target.'cfg(not(debug_assertions))'.dependencies]
server-utils-macros = { path = "../macros" }